[gd_scene load_steps=10 format=3 uid="uid://bxlj7j0erww8h"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_27rc1"]
[ext_resource type="Texture2D" uid="uid://rs1kl7kcxmo0" path="res://assets/MouseSpritesheet.png" id="1_ve8ql"]
[ext_resource type="PackedScene" uid="uid://ch2wong1xlama" path="res://scenes/killzone.tscn" id="2_72p7t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qjb8g"]
atlas = ExtResource("1_ve8ql")
region = Rect2(0, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub7j7"]
atlas = ExtResource("1_ve8ql")
region = Rect2(48, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4pbv"]
atlas = ExtResource("1_ve8ql")
region = Rect2(96, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_64atg"]
atlas = ExtResource("1_ve8ql")
region = Rect2(144, 0, 48, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_sk2dd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjb8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub7j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4pbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64atg")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3psi5"]
radius = 3.0
height = 8.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_27rc1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.708333, 0.727273)
sprite_frames = SubResource("SpriteFrames_sk2dd")
autoplay = "default"
frame = 2
frame_progress = 0.854436

[node name="Killzone" parent="." instance=ExtResource("2_72p7t")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_3psi5")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-7, 0)

[node name="RayCastLeftDown" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-6, 9)

[node name="RayCastRightDown" type="RayCast2D" parent="."]
position = Vector2(0, 7)
target_position = Vector2(6, 8)
